# claw-owner-task

./: .dev_logs  .gitignore  AGENT.md  CLAUDE.md  GEMINI.md  README.md  SKILL.md  package-lock.json  package.json  tsconfig.json  wrangler.example.toml  wrangler.toml
.claude/: settings.local.json
.github/: agent-orchestrator.json
.github/workflows/: release.yml
cli-rust/: Cargo.toml
cli-rust/src/: api.rs  main.rs  update.rs
docs/: AI任务总结需求说明.md  AI语义需求说明.md  Web端任务管理界面需求说明.md  任务一变更内容.md  任务三变更内容.md  任务二变更内容.md  任务五变更内容.md  任务六变更内容.md  任务四变更内容.md  单条任务独立查看需求说明.md  多任务列表网页卡片展示需求说明.md  开发计划.md  技术架构.md  接入飞书机器人需求说明.md  缺陷修复记录.md  聊天渠道内容展示逻辑总结.md  语音消息支持分析.md  语音消息统一处理R2方案实现指南-R2-ASR-v2.md  语音消息统一处理架构设计.md  重构优化计划.md  需求说明.md  飞书机器人 API 调用指南.md
skills/claw-task/: SKILL.md
skills/claw-task-antigravity/: SKILL.md
skills/claw-task-openclaw/: SKILL.md
src/cli/: api.js  index.js
src/web/: index.html
src/web/css/: style.css
src/web/js/: api.js  app.js
src/worker/: index.ts  utils.ts
src/worker/db/migrations/: 001_initial_schema.sql  (+7 more)
src/worker/handlers/: ai.ts  audio-proxy.ts  bot-shared.ts  categories.ts  feishu.ts  info.ts  list.ts  logs.ts  qqbot.ts  remind.ts  share.ts  summary.ts  tags.ts  tasks.ts  telegram.ts
src/worker/helpers/: date.ts
src/worker/middleware/: auth.ts  timezone.ts
src/worker/services/: asr.ts  bark.ts  feishu.ts  notify.ts  qqbot.ts  recurrence.ts  telegram.ts
src/worker/templates/: components.ts  styles.ts
tests/: api_tests.http  github_oauth.test.js  mock_data.sql  run_api_tests.js  test_plan.md
(+1 files in other folders)
