[package]
name = "claw-task"
version = "0.1.0"
edition = "2024"
description = "Claw Owner Task CLI - A minimalist task manager for humans and AI."

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tabled = "0.17"
