[package]
name = "claw-task"
version = "1.5.5"
edition = "2024"
description = "Claw Owner Task CLI - A minimalist task manager for humans and AI."

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tabled = "0.17"
self-replace = "1.5.0"
semver = "1.0.27"
